# fast_rust_api

./: Cargo.toml  README.md  rustfmt.toml
src/: db.rs  main.rs
