[package]
name = "words_api"
version = "0.1.0"
authors = ["diegodelrieu <diego.delrieu@preligens.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
meilisearch-sdk = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"